@@ -1,9 +1,22 @@
 # MIPS_Simulator
 
+---
 See `Documents/README.md` for more details.
-
-### authors: 
+---
+### Authors: 
 - Arthur Bacon
 - Ganesh Ghimire
 - Ari Majumdar
 - Assytan Tandia
+---
+
+### Quickrun
+Navigate to MIPS_Simulator directory (that this read me is currently in)<br>
+Copy and run the following command in terminal/cmd:
+```bash
+java --module-path out/artifacts/MIPS_Simulator_jar/ \
+     --add-modules javafx.controls,javafx.fxml,javafx.graphics \
+     -jar out/artifacts/MIPS_Simulator_jar/MIPS_Simulator.jar
+```
+---
+See `Documents/README.md` for more details.
